kubernet/react/react_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: react
